fixed some register entries, allowed two work ids in one entity with @ref

--- a/Webseite/briefedition/public/data/briefe_html/brief1.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief1.html
@@ -20,11 +20,11 @@
                 hindern, welchen der schönste sympatische<br>
                 zug das edlen in zwey <span class="latintype">caracter</span>, in<br>
                 mir hervor brachte – und mir das<br>
-                <span class="entity work" data-key="werk1">büchelgen der <span class="latintype">Resignation</span></span> dopelt Lieb<br>
+                <span class="entity work" data-keys='["werk1"]'>büchelgen der <span class="latintype">Resignation</span></span> dopelt Lieb<br>
                 machte – auch meinen Seegen für<br>
                 <span class="underline">Sie</span> und <span class="underline">S.B.</span> – vereint – adieu Neffe!<br>
                 Sehe ich Sie dann bald – aber heute nicht<br>
-                ich gehe zu kranken general – u küsse die gute Mutter<br>
+                ich gehe zu kranken general – u küsse die gute <span class="entity person" data-keys='["person8"]'>Mutter</span><br>
                 nun in eile – Laroche<br>
                 </div>
                 <div class="
