--- a/Webseite/briefedition/public/data/briefe_html/brief10.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief10.html
@@ -31,11 +31,11 @@
                 plagen – er möchte es der alten Frau<br>
                 übel nehmen –<br>
                 besorgen Sie dieß ich bitte es gehört<br>
-                in die <span class="entity work" data-key="werk12">briefe vom See Oneida</span> – ich will<br>
+                in die <span class="entity work" data-keys='["werk12"]'>briefe vom See Oneida</span> – ich will<br>
                 <span class="entity person" data-keys='["person26"]'>H. v. Münchhaußen</span> nicht nennen wenn<br>
                 Er etwa dieße besorgnis haben sollte –<br>
                 noch eine Frage – Schätzbarer Freund!<br>
-                haben Sie den <span class="entity work" data-key="werk13"><span class="underline"><span class="latintype">Cultivateur ameriain</span></span></span> bey H<br>
+                haben Sie den <span class="entity work" data-keys='["werk13"]'><span class="underline"><span class="latintype">Cultivateur ameriain</span></span></span> bey H<br>
                 </div>
                 <div class="
             page
