--- a/Webseite/briefedition/public/data/briefe_html/brief13.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief13.html
@@ -22,7 +22,7 @@
                 moralisch Politischen idèe machen, das<br>
                 der unbeschränkteste – beschränkt ist –<br>
                 Ach <span class="latintype">Gerning</span>!! mein traum in <span class="entity person" data-keys='["person6"]'>Wielands</span><br>
-                <span class="entity work" data-key="werk14"><span class="latintype">Mercur</span></span>! bald möchte darüber prophetzeyhn<br>
+                <span class="entity work" data-keys='["werk14"]'><span class="latintype">Mercur</span></span>! bald möchte darüber prophetzeyhn<br>
                 aber – es redt mir niemand aufrichtig<br>
                 von <span class="entity place" data-key="ort8">Weimar</span> – da habe auch nicht nöthig<br>
                 mein Hertz, von dem zu öfnen was ich<br>
@@ -54,7 +54,7 @@
                 die geschichte von <span class="entity person" data-keys='["person37"]'>obrist <span class="latintype">Polier</span></span> will aufsetzen<br>
                 und nun theurer Gerning Schwelgen Sie<br>
                 mit Ihrem Großen Freund – bey einem<br>
-                <span class="entity work" data-key="werk15">Platos gastmal</span> ähnlichen Schmauße an der<br>
+                <span class="entity work" data-keys='["werk15"]'>Platos gastmal</span> ähnlichen Schmauße an der<br>
                 Seite einer Diotima, <span class="underline">u</span><br>
                 </div>
                 <div class="
@@ -69,7 +69,7 @@
                 Honig ziehe – licht genieße, aber seine<br>
                 fittige frey behalte – aber aber –<br>
                 <span class="latintype">Ave Sophia</span> – <span class="latintype">Philosophia</span> – und die<br>
-                gespräche bey der <span class="entity work" data-key="werk16">Odyssee</span> ––––<br>
+                gespräche bey der <span class="entity work" data-keys='["werk16"]'>Odyssee</span> ––––<br>
                 adieu ich bete für Sie – und wünsche<br>
                 bald in die Stadt gerufen zu werden<br>
                 gute rechtschafne <span class="entity person" data-keys='["person8"]'>Mutter</span> umarme<br>
