--- a/Webseite/briefedition/public/data/briefe_html/brief15.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief15.html
@@ -97,7 +97,7 @@
                 uhr zu kauffen, die der Zufall<br>
                 zu mir führte – oder wissen Sie<br>
                 so jemand?<br>
-                viel schöns an Hüsgen den unendlich<br>
+                viel schöns an <span class="entity person" data-keys='["person45"]'>Hüsgen</span> den unendlich<br>
                 schätze adieu<br>
                 <br>
                 <span class="recipient-note"><span class="entity place" data-key="ort1">offenb</span> 28ten<br>
