--- a/Webseite/briefedition/public/data/briefe_html/brief16.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief16.html
@@ -44,7 +44,7 @@
                 <div class="l">zufriednen genuß der nothdurft, und</div>
                 <div class="l">ein alter nicht ohne laute –</div>
                 </div>
-                haben Sie je die <span class="entity work" data-key="werk17">briefe von Pope <span class="underline">u</span> seinen<br>
+                haben Sie je die <span class="entity work" data-keys='["werk17"]'>briefe von Pope <span class="underline">u</span> seinen<br>
                 Freunde</span> geleßen – O wie interessant sind dieße<br>
                 gestern bin mit <span class="entity person" data-keys='["person50"]'>andrè</span> zwischen Römischen<br>
                 Grabhüglen herum gefahren – die Sonne<br>
@@ -68,7 +68,7 @@
                 =den, und der wilde thymian auf ihnen von<br>
                 der luft hin u her gewiegt wurde –<br>
                 hätte ich der <span class="entity person" data-keys='["person34"]'>frau v. Bethmann</span> geld, der<br>
-                <span class="entity person" data-keys='["person14"]'>Mann von <span class="latintype">Colmar</span></span> müßte kommen u abends<br>
+                <span class="entity person" data-keys='["person14"]'>Mann von <span class="entity place" data-key="ort12"><span class="latintype">Colmar</span></span></span> müßte kommen u abends<br>
                 in einer solchen stunde da gehen – und<br>
                 sagen, was für gestalten Er sehe – da<br>
                 Er immer sagen kann, da liegt ein Mann –<br>
