--- a/Webseite/briefedition/public/data/briefe_html/brief17.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief17.html
@@ -46,7 +46,7 @@
                 haben Sie daß <span class="latintype">alte La Roche</span> sein Werk<br>
                 <span class="underline">u</span> das bild der <span class="latintype">Venus Andyomene</span> gesehen<br>
                 worauf sich beyliegender Brief bezieht –<br>
-                / haben Sie <span class="entity work" data-key="werk26"><span class="latintype">Fontenells maximes et ideès</span></span> geleßen<br>
+                / haben Sie <span class="entity work" data-keys='["werk26"]'><span class="latintype">Fontenells maximes et ideès</span></span> geleßen<br>
                 <span class="underline">u</span> ist folgende erklärung der natur<br>
                 des <span class="latintype">Enthousiasmus</span> richtig –<br>
                 </div>
