--- a/Webseite/briefedition/public/data/briefe_html/brief18.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief18.html
@@ -10,7 +10,7 @@
                 <br>
                 Wenn mein Schätzbarer <span class="latintype">Nepote</span><br>
                 heute schon auf die rükgaabe der<br>
-                <span class="entity work" data-key="werk18"><span class="underline">Scherzi</span></span> zälte so ist es mir leid;<br>
+                <span class="entity work" data-keys='["werk18"]'><span class="underline">Scherzi</span></span> zälte so ist es mir leid;<br>
                 denn ich will noch bey dem zweÿten<br>
                 durchleßen – <span class="latintype">dolce memorie</span> genießen<br>
                 von der zeit, wo ich die Holde Sprache<br>
@@ -38,7 +38,7 @@
                 mir ist es merkwürdig – daß <span class="underline">Sie</span><br>
                 die verschiednen reizende erscheinungen<br>
                 der liebe, und ihren gesinungen von<br>
-                <span class="entity person cert-low" data-keys='["person9","person1"]'>Sophien</span> zurük halten – soll sie – <span class="underline">muß</span><br>
+                <span class="entity person cert-low" data-keys='["person9"]'>Sophien</span> zurük halten – soll sie – <span class="underline">muß</span><br>
                 sie nicht gedacht haben –<br>
                 <span class="latintype">Gerning</span>! es war eine zeit, wo dein<br>
                 geist – in eben so schönen bildern<br>
