--- a/Webseite/briefedition/public/data/briefe_html/brief2.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief2.html
@@ -12,7 +12,7 @@
                 <span class="entity person" data-keys='["person2"]'><span class="latintype">Homer</span></span> – der mich sehr freut – weil<br>
                 ich kühn genug war, einen theil des<br>
                 <span class="latintype">caracters</span> seiner Werke, in einen<br>
-                <span class="entity work" data-key="werk2">brief an Lina</span> zu verweben –<br>
+                <span class="entity work" data-keys='["werk2"]'>brief an Lina</span> zu verweben –<br>
                 aber Nb mit <span class="underline">gehöriger Ehrfurcht</span> –<br>
                 Sie sahen gestern wohl das ich nicht<br>
                 zu leße gesellschaft kam – können Sie<br>
@@ -37,15 +37,15 @@
                 habe ursache zu sagen –<br>
                 lassen Sie sich <span class="underline">gewarnt seyn, ich bitte.</span><br>
                 ich habe Nb. – einem Freund in <span class="entity place" data-key="ort22">Stutgard</span><br>
-                <span class="entity work" data-key="werk3">terpsichore</span> empfolen – und die nachricht<br>
-                aus dem <span class="entity work" data-key="werk14"><span class="latintype">Mercur</span></span> abgeschrieben der schreibt<br>
+                <span class="entity work" data-keys='["werk3"]'>terpsichore</span> empfolen – und die nachricht<br>
+                aus dem <span class="entity work" data-keys='["werk14"]'><span class="latintype">Mercur</span></span> abgeschrieben der schreibt<br>
                 der wahre verfasser ist <span class="entity person" data-keys='["person4"]'><span class="latintype">Jacob Balde</span></span>, ein<br>
                 bayerischer 1668 verstorbener Jesuite<br>
                 der eben so schlechte deutsche als schöne<br>
                 Lateinische verse componirte dessen<br>
                 Sämtliche werke aus unßerer Bibliote<br>
-                sind – Herders <span class="entity work" data-key="werk3">Terpsichore</span> ist aus <span class="entity person" data-keys='["person4"]'><span class="latintype">Balde</span></span><br>
-                <span class="entity work" data-key="werk4"><span class="latintype">urania victrix</span></span> – und <span class="entity work" data-key="werk5"><span class="latintype">Sylva Lyrica</span></span><br>
+                sind – <span class="entity person" data-keys='["person5"]'>Herders</span> <span class="entity work" data-keys='["werk3"]'>Terpsichore</span> ist aus <span class="entity person" data-keys='["person4"]'><span class="latintype">Balde</span></span><br>
+                <span class="entity work" data-keys='["werk4"]'><span class="latintype">urania victrix</span></span> – und <span class="entity work" data-keys='["werk5","werk6"]'><span class="latintype">Sylva Lyrica</span></span><br>
                 genommen – also Freund! Kann<br>
                 unßer großer guter <span class="entity person" data-keys='["person5"]'>Herder</span> nicht bös seyn<br>
                 wenn noch andre den Mann nennen<br>
@@ -55,7 +55,7 @@
           ">
                 [3]
                 und mich reut sehr die stelle in dem<br>
-                2ten band <span class="entity work" data-key="werk1"><span class="latintype">Resignation</span></span> geändert zu haben<br>
+                2ten band <span class="entity work" data-keys='["werk1"]'><span class="latintype">Resignation</span></span> geändert zu haben<br>
                 aber die <span class="latintype">Philosophen</span> müssen sanft<br>
                 und schonlich behandelt werden ––––<br>
                 wissen Sie das <span class="entity person" data-keys='["person6"]'><span class="latintype">Wieland</span></span> den gantzen Sommer<br>
