--- a/Webseite/briefedition/public/data/briefe_html/brief20.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief20.html
@@ -33,7 +33,7 @@
                 Versammlung – und so wahr ich lebe, ich<br>
                 werde nie den Muth haben mehrere von<br>
                 Ihnen beÿsammen zu sehen. <span class="entity person" data-keys='["person6"]'><span class="underline">Wieland</span></span> ist<br>
-                gut – wie <span class="entity person" data-keys='["person6"]'>Wieland</span> in Bieberach war – Er<br>
+                gut – wie <span class="entity person" data-keys='["person6"]'>Wieland</span> in <span class="entity place" data-key="ort13">Bieberach</span> war – Er<br>
                 und seine Familie machen den Haupt Ge-<br>
                 genstand meiner Absichten bey ihm – un-<br>
                 </div>
