--- a/Webseite/briefedition/public/data/briefe_html/brief23.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief23.html
@@ -18,7 +18,7 @@
                 nehmen, daß Sie <span class="entity place" data-key="ort19">Sachsen</span> lieben – und<br>
                 wie sehr wünsche ich, daß wir <span class="entity place" data-key="ort19">Sachsen</span><br>
                 ähnlich werden mögen</span> –<br>
-                gestern abend sah ich, die <span class="entity work" data-key="werk22">seltsame<br>
+                gestern abend sah ich, die <span class="entity work" data-keys='["werk22"]'>seltsame<br>
                 bläther</span>, von <span class="entity person" data-keys='["person68"]'>Clemens B.</span> – – der Himmel<br>
                 gebe, daß <span class="entity place" data-key="ort20"><span class="underline">Jena</span></span> keinen andren jungen<br>
                 Mann, so werden lasse, wie dießer ist<br>
@@ -47,7 +47,7 @@
                 von Ihnen zu hören – und von Ihnen<br>
                 gefragt zu werden, wäre es auch<br>
                 <span class="underline">Politischer</span> weiße ––<br>
-                ich bitte um <span class="entity work" data-key="werk23"><span class="latintype">Caligone</span></span> so bald Sie –<br>
+                ich bitte um <span class="entity work" data-keys='["werk23"]'><span class="latintype">Caligone</span></span> so bald Sie –<br>
                 sie haben – <span class="latintype">adieu</span> verwirrt u in<br>
                 Eile – aber stets ergebene tante<br>
                 LaRoche –<br>
