--- a/Webseite/briefedition/public/data/briefe_html/brief24.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief24.html
@@ -19,7 +19,7 @@
                 rung? warum ist daß beste glük<br>
                 stükwerk – wie das wissen in der<br>
                 Bibel?</span> hat Ihnen <span class="entity person" data-keys='["person27"]'>Herr Herrmann</span><br>
-                die <span class="entity work" data-key="werk22">Satiren der Maria</span> – zugeschikt<br>
+                die <span class="entity work" data-keys='["werk22"]'>Satiren der Maria</span> – zugeschikt<br>
                 Oder selbst gebracht – da er Ihre be-<br>
                 kanntschaft wünschte – dießes müßte<br>
                 gestern geschehen seyn – sagen Sie<br>
@@ -38,10 +38,10 @@
                 doch ohne viele Menschen besuchen Sie<br>
                 noch gute – <span class="underline">Wahre tante la Roche</span><br>
                 /wer hat wohl daß bild von <span class="entity place" data-key="ort8">Weimar</span><br>
-                im <span class="entity work" data-key="werk24">Genius der zeit</span> geschrieben? und<br>
+                im <span class="entity work" data-keys='["werk24"]'>Genius der zeit</span> geschrieben? und<br>
                 Lieber! haben Sie das Gedicht zu<br>
-                Ehren deß <span class="entity person" data-keys='["person16"]'><span class="latintype">Coadjuten</span> von Mayntz</span><br>
-                dem <span class="entity work" data-key="werk14">Mercur</span> geschikt ich bitte die guten<br>
+                Ehren deß <span class="entity person" data-keys='["person16"]'><span class="latintype">Coadjuten</span></span> von <span class="entity place" data-key="ort21">Mayntz</span><br>
+                dem <span class="entity work" data-keys='["werk14"]'>Mercur</span> geschikt ich bitte die guten<br>
                 Menschen hoffen auf Ihre Güte –<br>
                 <span class="entity person" data-keys='["person71"]'>Krauß</span> fragt nach Vestung – die <span class="latintype">cerniert</span><br>
                 wurde, wie steht es? ach lieber!<br>
