--- a/Webseite/briefedition/public/data/briefe_html/brief3.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief3.html
@@ -14,7 +14,7 @@
                 ich <span class="entity person" data-keys='["person9"]'><span class="latintype">Madame Bethmann</span></span> noch vor der<br>
                 abreiße sah – indem er mir die<br>
                 literatur zeitung schikte in welcher<br>
-                der 4 band meiner <span class="entity work" data-key="werk7">Briefe von Rosalie</span><br>
+                der 4 band meiner <span class="entity work" data-keys='["werk7"]'>Briefe von Rosalie</span><br>
                 so vortheilhaft angezeigt sind – wo ich<br>
                 besonders den ausdruk eines Lobes<br>
                 für <span class="latintype">Erziehungs grundsäze traf</span> – welche<br>
@@ -32,7 +32,7 @@
                 [2]
                 dachte, es kann auch in andren<br>
                 Familien gutes thun – wie meine<br>
-                ganze <span class="entity work" data-key="werk7">Rosalie</span> berechnet war – ich<br>
+                ganze <span class="entity work" data-keys='["werk7"]'>Rosalie</span> berechnet war – ich<br>
                 bekenne Ihnen – das ich den verfasser<br>
                 aus einer art weiblichkeit verschwieg<br>
                 indem ich sagte – wenn Männer<br>
@@ -59,7 +59,7 @@
                 dem braven Mann dießen dienst – <span class="latintype">u</span><br>
                 geben mir die Freude –<br>
                 Suchen Sie mir doch etwas von dem<br>
-                Buchhändler <span class="entity person" data-keys='["person80"]'>walther</span> in Erlang zu erfahren<br>
+                Buchhändler <span class="entity person" data-keys='["person80"]'>walther</span> in <span class="entity place" data-key="ort3">Erlang</span> zu erfahren<br>
                 Er hatt ein äußerst liebens würdiges<br>
                 Mädchen von adel geheirathet – die ich<br>
                 recht gerne glüklich sehen möchte<br>
