--- a/Webseite/briefedition/public/data/briefe_html/brief5.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief5.html
@@ -11,7 +11,7 @@
                 und Seegen auf reiße – Seegen denen die<br>
                 Meinen Neffen lieben –––<br>
                 leßen Sie dieße blätter u sagen ob es<br>
-                möglich ist die <span class="entity work" data-key="werk8"><span class="underline">Germania</span></span> zu kaufen oder<br>
+                möglich ist die <span class="entity work" data-keys='["werk8"]'><span class="underline">Germania</span></span> zu kaufen oder<br>
                 zu leßen zu bekommen<br>
                 <span class="entity person" data-keys='["person14"]'>H. Pfeffel</span> dankte mir sehr für Ihre bekantschaft<br>
                 wegen viel Ihrer Kentnisse – und edlen grundsätzen von<br>
