--- a/Webseite/briefedition/public/data/briefe_html/brief6.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief6.html
@@ -16,7 +16,7 @@
                 wahrheit hält ––– theurer – theurer Neffe! für was<br>
                 hielten Sie wohl ein paar briefe welche ich Ihnen<br>
                 ohngefähr vor 3 monaten schrieb – wo ich sagte wie<br>
-                <span class="entity work" data-key="werk25">Jorik zu Elisa</span> – Ehre dich Selbst – wo ich schrieb<br>
+                <span class="entity work" data-keys='["werk25"]'>Jorik zu Elisa</span> – Ehre dich Selbst – wo ich schrieb<br>
                 Sey großmüthig – Kein Neid – Keine rache – aber<br>
                 auch keine Trauer ––– glaubten Sie ich träumte?<br>
                 Nun Lieber – Sie wissen das ich nach Ihrem wunsch<br>
@@ -73,8 +73,8 @@
                 die mit Italienischen Zauber <span class="latintype">caracteren</span><br>
                 beschriebene Binde vom aug – und daß so<br>
                 schöne gespräch – und die <span class="latintype">Elegie</span>, in die Schieblade<br>
-                Seegen auf Reißen nach Hanau – Büdingen u<br>
-                Erbach – – – möge zerstreuung Ihnen wohlthun<br>
+                Seegen auf Reißen nach <span class="entity place" data-key="ort4">Hanau</span> – <span class="entity place" data-key="ort5">Büdingen</span> u<br>
+                <span class="entity place" data-key="ort6">Erbach</span> – – – möge zerstreuung Ihnen wohlthun<br>
                 und stärke geben wahrheit zu sehen, und zu lieben<br>
                 adieu guter Schätzbarer Neffe! wie gerne möchte<br>
                 tante Sie sprechen<br>
