--- a/Webseite/briefedition/public/data/briefe_html/brief8.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief8.html
@@ -37,14 +37,14 @@
                 [2]
                 auch das die <span class="underline">Edle große <span class="entity person" data-keys='["person20"]'>Caroline</span></span> – in dem<br>
                 Werk von <span class="entity person" data-keys='["person92"]'><span class="underline"><span class="latintype">Grasset St Sauveur</span></span></span> –<br>
-                / <div class="name"><span class="latintype"><span class="underline">L'antique Rome ornè de 50 Tableaux</span><br>
-                Paris chez Leroy</span></div> –<br>
+                / <span class="entity work" data-keys='["werk9"]'><span class="latintype"><span class="underline">L'antique Rome ornè de 50 Tableaux</span><br>
+                Paris chez Leroy</span></span> –<br>
                 etwas von ihrem wunsch der wirkung u des<br>
                 fortganges der wissenschaften durch revolution<br>
                 erfüllt finden könte – wie auch<br>
-                <div class="name"><span class="latintype"><span class="underline">les Souvenirs de George III – pendant ses voyages<br>
+                <span class="entity work" data-keys='["werk10"]'><span class="latintype"><span class="underline">les Souvenirs de George III – pendant ses voyages<br>
                 à Cheltenham – Glocester – et Worchester – traduit<br>
-                de l'anglais</span> – Paris chez Beaupoil</span></div> – gewiß<br>
+                de l'anglais</span> – Paris chez Beaupoil</span></span> – gewiß<br>
                 etwas davon hatt –<br>
                 daß Sie meiner bey <span class="entity person" data-keys='["person5"]'>Herder</span> gedenken wollen<br>
                 freut mich ungemein – und Ihr Politisches<br>
@@ -65,13 +65,13 @@
                 ist sehr schwächlich – dann wird man froh seyn<br>
                 einen Klugen mann, zur Hand zu haben –<br>
                 O wünschen Sie beyde den 3 band der<br>
-                <span class="entity work" data-key="werk2">briefe an Lina</span> eine glükliche Reiße<br>
+                <span class="entity work" data-keys='["werk2"]'>briefe an Lina</span> eine glükliche Reiße<br>
                 ich habe mir 3 Ex. – auf Holländ papier aus<br>
-                gebetten, um an Carolina zu geben –<br>
+                gebetten, um an <span class="entity person" data-keys='["person20"]'>Carolina</span> zu geben –<br>
                 lange war ich traurig – niemand und zu haben<br>
                 der meine papiere mit mir läße ehe sie<br>
                 gedrukt werden – jetzo bin ich es nicht<br>
-                mehr – seit ich <span class="entity work" data-key="werk11">Gibbons leben</span> laß –<br>
+                mehr – seit ich <span class="entity work" data-keys='["werk11"]'>Gibbons leben</span> laß –<br>
                 Ihre liebe hatt mich abgehalten Ihnen<br>
                 mehrere meiner Sachen zu weißen<br>
                 weil alles zu den Füssen der Göttin gelegt<br>
