--- a/Webseite/briefedition/public/data/briefe_html/brief9.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief9.html
@@ -41,7 +41,7 @@
                 von Herbst und Winter sprechen –<br>
                 ich find es nur eine natürliche folge<br>
                 weil das bild der holden <span class="latintype">franquemont</span><br>
-                unmitelbar, von <span class="latintype">Sapho</span> erschiene, wie<br>
+                unmitelbar, von <span class="entity person" data-keys='["person24"]'><span class="latintype">Sapho</span></span> erschiene, wie<br>
                 die blätter beyder<br>
                 </div>
                 <div class="
