--- a/Webseite/briefedition/public/data/briefe_html/brief22.html
+++ b/Webseite/briefedition/public/data/briefe_html/brief22.html
@@ -28,7 +28,7 @@
                 Sie sehen hier eine frage beantwortet<br>
                 ob man etwas von meiner feder sehen<br>
                 werde?<br>
-                <span class="entity work" data-key="werk20">Schatten risse merkwürdiger tage 1799</span> – mehr<br>
+                <span class="entity work" data-keys='["werk20"]'>Schatten risse merkwürdiger tage 1799</span> – mehr<br>
                 wird es nicht seyn<br>
                 </div>
                 <div class="
@@ -70,7 +70,7 @@
                 bücher mitheilte – <span class="unclear">Kxxxxx</span> mir schöne tage gaab<br>
                 welche ich ihm stets danken werde –<br>
                 im <span class="entity person" data-keys='["person5"]'>Herderischen</span> Hauß, meine innige verehr-<br>
-                -rung – u frage ob <span class="entity person" data-keys='["person84"]'><span class="latintype">Dupuis</span></span> den 2 theil deß <span class="entity work" data-key="werk19">Schreib-<br>
+                -rung – u frage ob <span class="entity person" data-keys='["person84"]'><span class="latintype">Dupuis</span></span> den 2 theil deß <span class="entity work" data-keys='["werk19"]'>Schreib-<br>
                 -tisches</span> übergab –<br>
                 im Beth Hauß ist viel Kummer, und<br>
                 der Haußvater gar nicht wohl, daß große B.<br>
@@ -110,7 +110,7 @@
                 u wenn ich genennt werde sagen Sie –<br>
                 daß ich sehr dankbar alles wohlwollens<br>
                 mich erinnere – u vergessen Sie<br>
-                nicht <span class="entity work" data-key="werk21"><span class="latintype">Schertzi Pittorici et Poetini</span></span> – ich bitte<br>
+                nicht <span class="entity work" data-keys='["werk21"]'><span class="latintype">Schertzi Pittorici et Poetini</span></span> – ich bitte<br>
                 für alte tante LaRoche<br>
                 <br>
                 meine Enkelin <span class="entity person" data-keys='["person1"]'><span class="latintype">Sophie</span></span><br>
